--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.ohad.babysitter"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -30,4 +30,12 @@ dependencies {
     // TODO: Parse
     compile 'com.parse.bolts:bolts-android:1.2.1'
     compile 'com.parse:parse-android:1.10.2'
+    // TODO: Parse Login
+    compile 'com.parse:parseui-login-android:0.0.1'
+    compile 'com.parse:parseui-widget-android:0.0.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
+    compile 'com.parse:parsefacebookutils-v4-android:1.10.3@aar'
+    compile 'com.parse:parsetwitterutils-android:1.10.3'
+    // TODO: Apache
+    compile 'org.apache.commons:commons-lang3:3.4'
 }
