--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.4'
     // TODO: EditTextView
     compile 'com.gregacucnik:edittextview:1.2'
+    // TODO: Bus Libs
+    compile 'com.squareup:otto:1.3.8'
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
